# plastic

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: plastic_disjoint.yaml  plastic_standard.yaml  rnn_disjoint.yaml  rnn_standard.yaml
core/: __init__.py  main.py
core/base/: __init__.py  dataset.py  generator.py  network.py  trainer.py
core/dataset/: __init__.py  disjoint.py  standard.py
core/network/: __init__.py  plastic.py  rnn.py
core/utils/: __init__.py  dataset.py  logging.py  report.py  run.py
reports/: README.md
tests/: run_tests.py  test_datasets.py  test_training.py
